--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -1,9 +1,11 @@
-on: push
+name: Secrets Demo
+
+on: [ push ]
 
 jobs:
   secrets:
-      runs-on: ubuntu-latest
-      steps:
-        run: echo $MY_SECRET
-      env:
-        MY_SECRET: ${{ secrets.MY_SECRET }}
+    runs-on: ubuntu-latest
+    steps:
+      run: echo $MY_SECRET
+    env:
+      MY_SECRET: ${{ secrets.MY_SECRET }}
