yml error messages suck

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -6,6 +6,6 @@ jobs:
   secrets:
     runs-on: ubuntu-latest
     steps:
-      run: echo $MY_SECRET
+      - run: echo $MY_SECRET
     env:
       MY_SECRET: ${{ secrets.MY_SECRET }}
