use python shell to see if github actions leaks secrets

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -6,6 +6,9 @@ jobs:
   secrets:
     runs-on: ubuntu-latest
     steps:
-      - run: echo $MY_SECRET
+      - run: |
+          import os
+          print(os.getenv('MY_SECRET')
+    shell: python
     env:
       MY_SECRET: ${{ secrets.MY_SECRET }}
