Add closing bracket

--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - run: |
           import os
-          print(os.getenv('MY_SECRET')
+          print(os.getenv('MY_SECRET'))
         shell: python
         env:
           MY_SECRET: ${{ secrets.MY_SECRET }}
