Update permissions for label-pr workflow job

--- a/.github/workflows/label-on-comment.yml
+++ b/.github/workflows/label-on-comment.yml
@@ -14,6 +14,8 @@ jobs:
           NUMBER: ${{ github.event.issue.number }}
 
   label-pr:
+    permissions: write-all
+    name: Label PR
     if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/bug') }}
     runs-on: ubuntu-latest
     steps:
